Fix whitespace display of messages

--- a/css/style.scss
+++ b/css/style.scss
@@ -111,6 +111,7 @@ a {
 	}
 
 	.message {
+		white-space: pre-wrap;
 		a {
 			overflow-wrap: break-word;
 			word-wrap: break-word;
